💄 QuizzCards: fix height cards on safari

--- a/components/Quizz/Cards/style.less
+++ b/components/Quizz/Cards/style.less
@@ -1,7 +1,7 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, calc(50% - 24px));
   grid-column-gap: 24px;
   grid-row-gap: 24px;
 
